--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,4 +3,7 @@ extends layouts/main
 block content
   h1= title
   h2= req
-  p Welcome to #{title}
+  if user
+    p Welcome to #{title}, hi #{user.username}
+  else
+    p Welcome to #{title} no
