Complete feature register

--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -30,6 +30,7 @@ html(lang='en')
     // Scripts
     script(src='js/jquery-3.3.1.min.js')
     script(src='js/jquery-migrate-3.0.0.min.js')
+    script(src='https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js')
     script(src='js/mmenu.min.js')
     script(src='js/tippy.all.min.js')
     script(src='js/simplebar.min.js')
@@ -42,3 +43,4 @@ html(lang='en')
     script(src='js/slick.min.js')
     script(src='js/typed.js')
     script(src='js/custom_jquery.js')
+    block scripts 
