--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -5,7 +5,7 @@ header#utf-header-container-block
       .utf-left-side
         #logo
           a(href='index-1.html')
-            img(src='images/logo.png' alt='')
+            img(src='/images/logo.png' alt='')
         nav#navigation
           ul#responsive
             li
@@ -209,7 +209,7 @@ header#utf-header-container-block
               .utf-header-notifications-trigger.user-profile-title
                 a(href='#')
                   .user-avatar.status-online
-                    img(src='images/user_small_1.jpg' alt='')
+                    img(src='/images/user_small_1.jpg' alt='')
                   .user-name Hi, #{user.username}!
               .utf-header-notifications-dropdown-block
                 ul.utf-user-menu-dropdown-nav
