Update JobSeeker profile
completed but upload image not work

--- a/src/views/auth/login.pug
+++ b/src/views/auth/login.pug
@@ -16,9 +16,9 @@ block content
               a(href='/register') Sign Up!
           form#login-form(method='post' action='/login')
             .utf-no-border
-              input#emailaddress.utf-with-border(type='text' name='email' placeholder='Email Address' required='')
+              input#emailaddress.utf-with-border(type='text' name='email' placeholder='Email Address' required='' value='me@phuc.to')
             .utf-no-border
-              input#password.utf-with-border(type='password' name='password' placeholder='Password' required='')
+              input#password.utf-with-border(type='password' name='password' placeholder='Password' required='' value='password')
             .checkbox.margin-top-10
               input#two-step(type='checkbox')
               label(for='two-step')
