--- a/src/views/layouts/dashboard.pug
+++ b/src/views/layouts/dashboard.pug
@@ -18,6 +18,8 @@ html(lang='en')
         // Google Fonts
         link(href='https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap' rel='stylesheet')
         link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap' rel='stylesheet')
+        // iziToast
+        link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css')
     body
         include ../partials/preloader
         // Wrapper
@@ -31,6 +33,8 @@ html(lang='en')
         //scripts
         script(src='/js/jquery-3.3.1.min.js')
         script(src='/js/jquery-migrate-3.0.0.min.js')
+        script(src='https://kit.fontawesome.com/135c4d96ce.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js')
         script(src='/js/mmenu.min.js')
         script(src='/js/tippy.all.min.js')
         script(src='/js/simplebar.min.js')
@@ -42,6 +46,5 @@ html(lang='en')
         script(src='/js/magnific-popup.min.js')
         script(src='/js/slick.min.js')
         script(src='/js/custom_jquery.js')
-        // documentation: http://www.chartjs.org/docs/latest
         script(src='/js/chart.min.js')
         block scripts
