--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -209,7 +209,7 @@ header#utf-header-container-block
               .utf-header-notifications-trigger.user-profile-title
                 a(href='#')
                   .user-avatar.status-online
-                    img(src='/images/user_small_1.jpg' alt='')
+                    img(src='/images/user-avatar-placeholder.png' alt='')
                   .user-name Hi, #{user.username}!
               .utf-header-notifications-dropdown-block
                 ul.utf-user-menu-dropdown-nav
