--- a/src/views/partials/sidebar.pug
+++ b/src/views/partials/sidebar.pug
@@ -14,61 +14,19 @@
             span.avatar-img
               img.photo(alt='' src='/images/user-avatar-placeholder.png')
             .user-profile-text
-              span.fullname John Williams
-              span.user-role Software Engineer
+              span.fullname= user.username
+              span.user-role= user.email
           .clearfix
           ul
-            li.active
-              a(href='dashboard.html')
+            li
+              a(href='/dashboard')
                 i.icon-material-outline-dashboard
                 |  Dashboard
             li
-              a(href='dashboard-jobs-post.html')
+              a(href='/dashboard/profile')
                 i.icon-line-awesome-user-secret
-                |  Manage Jobs Post
+                |  Profile
             li
-              a(href='dashboard-manage-jobs.html')
-                i.icon-material-outline-group
-                |  Manage Jobs 
-                span.nav-tag 5
-            li
-              a(href='dashboard-manage-resume.html')
-                i.icon-material-outline-supervisor-account
-                |  Manage Resume
-            li
-              a(href='dashboard-bookmarks.html')
-                i.icon-feather-heart
-                |  Bookmarks Jobs
-            li
-              a(href='#')
-                i.icon-line-awesome-file-text
-                |  Freelancer Tasks
-              ul.dropdown-nav
-                li
-                  a(href='dashboard-freelancer-manage-tasks-list.html')
-                    i.icon-feather-chevron-right
-                    |  Freelancer Manage Tasks
-                li
-                  a(href='dashboard-manage-bidders-list.html')
-                    i.icon-feather-chevron-right
-                    |  Freelancer Manage Bidders
-                li
-                  a(href='dashboard-freelancer-active-bids.html')
-                    i.icon-feather-chevron-right
-                    |  Freelancer Active Bids
-                li
-                  a(href='dashboard-freelancer-add-post-bids.html')
-                    i.icon-feather-chevron-right
-                    |  Freelancer Post Bids
-            li
-              a(href='dashboard-reviews.html')
-                i.icon-material-outline-rate-review
-                |  Reviews
-            li
-              a(href='dashboard-my-profile.html')
-                i.icon-feather-user
-                |  My Profile
-            li
-              a(href='index-1.html')
-                i.icon-material-outline-power-settings-new
-                |  Logout
+              a(href='/dashboard/cv')
+                i.icon-line-awesome-user-secret
+                |  CV
