--- a/src/views/partials/sidebar.pug
+++ b/src/views/partials/sidebar.pug
@@ -25,8 +25,12 @@
             li
               a(href='/dashboard/profile')
                 i.icon-line-awesome-user-secret
-                |  Profile
+                |  Manage Profile
             li
               a(href='/dashboard/cv')
                 i.icon-line-awesome-user-secret
-                |  CV
+                |  Manage CV
+            li
+              a(href='/dashboard/job')
+                i.icon-line-awesome-user-secret
+                |  Manage Job Post
