--- a/src/views/layouts/dashboard.pug
+++ b/src/views/layouts/dashboard.pug
@@ -37,6 +37,7 @@ html(lang='en')
         script(src='/js/jquery-migrate-3.0.0.min.js')
         script(src='https://kit.fontawesome.com/135c4d96ce.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js')
+        script(src='https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js')
         script(src='/js/mmenu.min.js')
         script(src='/js/tippy.all.min.js')
         script(src='/js/simplebar.min.js')
